working 1st half add new word

--- a/index.html
+++ b/index.html
@@ -27,22 +27,26 @@
     <div class="add-new-word wrapper">
         <form>
             <label for="de-word">German:</label>
-            <input type="text" id="new-de-word" name="de-word" placeholder="new-de-word"><br><br>
+            <input type="text" id="new-de-word" name="de-word" value=""><br><br>
             <label for="en-word">English:</label>
-            <input type="text" id="new-en-word" name="en-word" placeholder="new-en-word"><br><br>
-            <label for="example">Example:</label>
-            <input type="text" id="examples" name="example" placeholder="examples"><br><br>
+            <input type="text" id="new-en-word" name="en-word" value=""><br><br>
+            <label for="examples">Example:</label>
+            <input type="text" id="examples" name="example" value=""><br><br>
             <input type="submit" value="Add" class="btn" id="add-new-word-btn">
           </form> 
+
+          <p id="de-word-par">jdalkjg</p>
+          <p id="en-word-par"></p>
+          <p id="examples-par"></p>
     </div>
 </section>
 <section id="learn">
     <div class="learn wrapper">
         <form>
-            <label for="de-word">German:</label>
-            <input type="text" id="de-word" name="de-word" placeholder="de"><br><br>
             <label for="en-word">English:</label>
-            <input type="text" id="en-word" name="en-word" placeholder="en"><br><br>
+            <input type="text" id="en-word" name="en-word" value=""><br><br>
+            <label for="de-word">German:</label>
+            <input type="text" id="de-word" name="de-word" value=""><br><br>
             <p id="test-par" class="learn-par"></p>
             <p id="examples-par" class="learn-par"></p><br><br>
             <input type="submit" value="Check" class="btn" id="check-btn">
